feat: Включены preview фичи языка (switch pattern matching)